test/classes/errors/sharedImplicitCoercionError.good
sharedImplicitCoercionError.chpl:8: In function 'test':
sharedImplicitCoercionError.chpl:10: error: cannot pass value produced by coercion to const ref formal 'val'
sharedImplicitCoercionError.chpl:4: note: in call to 'print', defined here
sharedImplicitCoercionError.chpl:10: note: implicit coercion from shared C2 to shared C1
